WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
316374
Unreviewed, fix unified build in some cases
https://bugs.webkit.org/show_bug.cgi?id=316374
Summary
Unreviewed, fix unified build in some cases
Yusuke Suzuki
Reported
2026-06-04 21:38:43 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-06-04 21:38:51 PDT
<
rdar://problem/178786531
>
Yusuke Suzuki
Comment 2
2026-06-04 21:42:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66519
EWS
Comment 3
2026-06-04 21:45:17 PDT
Committed
314614@main
(6c8b20e9f7b2): <
https://commits.webkit.org/314614@main
> Reviewed commits have been landed. Closing PR #66519 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug