Unreviewed, fix unified build in some cases https://bugs.webkit.org/show_bug.cgi?id=316374 rdar://178786531

Fix CMake unified builds.

* Source/JavaScriptCore/runtime/temporal/core/CalendarICUBridge.cpp:
* Source/JavaScriptCore/runtime/temporal/core/TemporalCoreTypes.h:
* Source/JavaScriptCore/runtime/temporal/core/TimeZoneICUBridge.cpp:

Canonical link: https://commits.webkit.org/314614@main